# rholang-nvim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.sh
lua/: rholang.lua
lua/rholang/: health.lua
queries/rholang/: folds.scm  highlights.scm  indents.scm  injections.scm  textobjects.scm
